# overdrive

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: main-ci.yml
scr/overdrive/: __init__.py  __main__.py  benchmarks.py  cli.py  docker_runtime.py  hardware.py  hf_catalog.py  hf_cli.py  models.py  paths.py  profiles.py  scanner.py  state.py  tui.py  web.py
scr/overdrive/static/: app.css  app.js  benchmark.js  models_search.js
scr/overdrive/templates/: benchmarks.html  index.html  models_search.html
test/: test_benchmarks.py  test_cli.py  test_docker_runtime.py  test_hardware.py  test_hf_catalog.py  test_hf_cli.py  test_profiles.py  test_scanner.py  test_smoke.py  test_state.py  test_stats.py  test_tui.py  test_web.py
