[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overdrive"
version = "0.1.0"
description = "Performance-focused TUI and CLI orchestration for local vLLM runtimes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "jordanovski" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.6.9,<1.0"
]

[project.scripts]
overdrive = "overdrive.__main__:main"

[tool.setuptools]
package-dir = {"" = "scr"}

[tool.setuptools.packages.find]
where = ["scr"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["test"]
pythonpath = ["scr"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]