[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overdrive"
version = "0.1.0"
description = "Performance-focused TUI and CLI orchestration for local vLLM runtimes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "jordanovski" }
]
dependencies = [
  "click>=8.1,<9.0",
  "docker>=7.1,<8.0",
  "huggingface_hub>=0.34,<2.0",
  "pydantic>=2.9,<3.0",
  "PyYAML>=6.0,<7.0",
  "textual>=0.79,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest-cov>=5.0,<6.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.6.9,<1.0"
]

[project.scripts]
overdrive = "overdrive.__main__:main"

[tool.setuptools]
package-dir = {"" = "scr"}

[tool.setuptools.packages.find]
where = ["scr"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["test"]
pythonpath = ["scr"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]