[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overdrive"
version = "0.2.20"
description = "Performance-focused web UI and CLI orchestration for local vLLM runtimes."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "jordanovski" }
]
dependencies = [
  "click>=8.1,<9.0",
  "datasets>=3.0,<5.0",
  "docker>=7.1,<8.0",
  "fastapi>=0.115,<1.0",
  "huggingface_hub>=0.34,<2.0",
  "Jinja2>=3.1,<4.0",
  "pydantic>=2.9,<3.0",
  "PyYAML>=6.0,<7.0",
  "requests>=2.32,<3.0",
  "swebench>=4.1,<5.0",
  "uvicorn>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest-cov>=5.0,<6.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.6.9,<1.0"
]

[project.scripts]
overdrive = "overdrive.__main__:main"

[tool.setuptools]
package-dir = {"" = "scr"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["scr"]

[tool.setuptools.package-data]
overdrive = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["test"]
pythonpath = ["scr"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]